--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "dist/js",
-    "module": "CommonJS",
     "target": "es2022",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "noEmitOnError": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "sourceMap": true
   },
   "include": ["src/**/*"]
